# notepad-automation-script

./: .gitignore  README.md  demo.py  pyproject.toml  quick_test.py
src/notepad_automation/: __init__.py  config.py  main.py
src/notepad_automation/api/: __init__.py  client.py
src/notepad_automation/automation/: __init__.py  keyboard.py  mouse.py  window.py
src/notepad_automation/files/: __init__.py  manager.py
src/notepad_automation/find_icon_coordinates/: find_icon_coordinates.py
src/notepad_automation/grounding/: __init__.py  detector.py  screenshot.py
tests/: __init__.py  test_api_files.py  test_automation.py  test_grounding.py
